added comment re images

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>This is where the header is</h1>
     <p>One day this is where the story will go</p>
+
+    <!-- all the images will be placed here-->
 </body>
 </html> 
