added CSS for block and inline

--- a/index.html
+++ b/index.html
@@ -4,11 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>This is where the header is</h1>
+   
+   <div class="block">
+    <h1>header 1</h1>
     <p>One day this is where the story will go</p>
+   </div> 
 
-    <!-- all the images will be placed here-->
+   <div class="block">
+    <h1>Header 2 </h1>
+    <p>One day this is where the story will go</p>
+   </div> 
+
+   <div class="block">
+    <h1>header 3</h1>
+    <p>One day this is where the story will go</p>
+   </div> 
+   
 </body>
 </html> 
